fix(#308): align look and feel of file input widget
single file vs multifile now look more similar

--- a/src/renderer/style/forms.css
+++ b/src/renderer/style/forms.css
@@ -59,9 +59,8 @@ input:invalid {
 }
 .single-file-input {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 2rem;
+    flex-direction: column;
+    gap: 1rem;
 }
 .multi-file-input {
     input {
